--- a/src/main/resources/tn/corp/mlda/mlda/presentation/main.fxml
+++ b/src/main/resources/tn/corp/mlda/mlda/presentation/main.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -81,4 +84,14 @@
         </rowConstraints>
       </GridPane>
    </center>
+   <bottom>
+      <BarChart fx:id="barChart" prefHeight="148.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </BarChart>
+   </bottom>
 </BorderPane>
